Added solid fuel to graphical refinery needs report. Fixed rounding error when optimizing for express belts.

--- a/FactorioSolver/FactorioSolver.csproj
+++ b/FactorioSolver/FactorioSolver.csproj
@@ -608,6 +608,15 @@
     <Content Include="Images\Solid_fuel.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\Solid_fuel_from_heavy_oil.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Solid_fuel_from_light_oil.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Solid_fuel_from_petroleum_gas.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\Space_science_pack.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
